--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1353,3 +1353,9 @@ address {
         font-weight: 500;
     }
 }
+
+section {
+    @include mq(lg) {
+        overflow: hidden;
+    }
+}
